# ozonhelper

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
backend/: .env.development.example  .env.example  =2.0.0  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1c2b0122e85d_initial.py  b7e4a1c2d903_shop_tracking_erp.py  c8f5d2e1a904_shop_tracking_erp_phase2.py  d4a8f1c2e905_add_user_phone_sms_login.py  e5f6a7b8c901_finance_posting_order_date.py  f6a7b8c9d012_store_order_sync_initial_days.py  g7b8c9d0e123_store_order_sync_default_7.py
backend/src/: cache.py  config.py  database.py  main.py  storage.py
backend/src/api/: ai_endpoints.py  auth.py  deps.py  error_handler.py  exceptions.py  exchange_rate.py  logging_middleware.py  products.py  rankings.py  selection_pool.py  store_deps.py  stores.py  tracking.py  tracking_phase2.py
backend/src/auth/: api_key.py  jwt.py  password.py
backend/src/bootstrap/: admin_user.py  default_store.py
backend/src/models/: __init__.py  api_key.py  collected_product.py  processing_task.py  ranked_product.py  selected_product.py  sourcing.py  store.py  tracking_sync.py  user.py
backend/src/schemas/: ai.py  alerts.py  auth.py  common.py  dashboard.py  inventory.py  orders.py  phase2.py  rankings.py  stores.py  sync.py  tracking.py
backend/src/services/: crypto.py
backend/src/services/ai_processor/: chat_service.py  deepseek_client.py  glm_client.py  image_edit_service.py  image_resizer.py  llm_client.py  ozon_tools.py  seededit.py  seededit_lock.py  tmt_translator.py  tool_cache.py
backend/src/services/ozon/: __init__.py  client.py  dates.py  rate_limiter.py
backend/src/services/phase2/: __init__.py  exchange_rate.py  finance.py  (+5 more)
backend/src/worker/: ai_tasks.py  app.py  async_runner.py  phase2_tasks.py  scraper_tasks.py  sync_tasks.py
backend/tests/: test_ozon_client_phase2.py
ozon-mcp/: README.md  pyproject.toml
ozon-mcp/scripts/: parse_ozon_api_html.py
ozon-mcp/src/ozon_mcp/: __init__.py  api_index.py  client.py  config.py  errors.py  rate_limiter.py  resources.py  server.py
(+272 files in other folders)
