[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ozonhelper-backend"
version = "0.1.0"
description = "Ozon 跟卖全链路平台 - 后端 API 服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "scrapling[fetchers]>=0.4.9",
    "httpx>=0.26.0",
    "Pillow>=10.2.0",
    "minio>=7.2.0",
    "volcengine>=1.0.0",
    "tencentcloud-sdk-python-tmt>=3.0.0",
    "structlog>=24.1.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "alibabacloud_dypnsapi20170525>=1.0.0",
    "alibabacloud_tea_openapi>=0.3.0",
    "alibabacloud_tea_util>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
