[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ozon-mcp"
version = "0.1.0"
description = "Ozon Seller API MCP Server for AI Agents"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
]

[project.scripts]
ozon-mcp = "ozon_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ozon_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/ozon_mcp/data/api-index.json" = "ozon_mcp/data/api-index.json"
